--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "@types/node": "^16.11.25",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "react-to-pdf": "^0.0.14",
     "typescript": "^4.5.5",
-    "web-vitals": "^2.1.4",
-    "lodash": "^4.17.21"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
