--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^17.0.11",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
+    "react-component-export-image": "^1.0.6",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "react-to-pdf": "^0.0.14",
