--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "react-to-pdf": "^0.0.14",
+    "ts-localstorage": "^2.0.0",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
